# simryx-hub

./: .gitignore  Directory.Build.props  README.md  Simryx.sln  build-installer.bat  release.bat
.github/workflows/: release.yml
Simryx лого/Project/: logo1.ai
installer/Simryx.Setup/: App.xaml  App.xaml.cs  AppInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  Simryx.Setup.csproj  app.manifest
installer/Simryx.Setup/Services/: GitHubClient.cs  InstallService.cs  Native.cs  (+2 more)
src/Simryx.App/: App.xaml  App.xaml.cs  Imports.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Simryx.App.csproj  Simryx.App.slnx  app.manifest
src/Simryx.Common/: Class1.cs  Simryx.Common.csproj
src/Simryx.Core/: Class1.cs  Simryx.Core.csproj
src/Simryx.Devices/: Class1.cs  Simryx.Devices.csproj
src/Simryx.Firmware/: Class1.cs
src/Simryx.Profiles/: Class1.cs
src/Simryx.ScsPlugin/: CMakeLists.txt  simryx.def  simryx_plugin.cpp  simryx_shared.h  simryx_telemetry.exp  simryx_telemetry.lib
src/Simryx.Security/: Class1.cs
src/Simryx.Telemetry/: AssettoCorsaTelemetryProvider.cs  Class1.cs  EuroTruck2Shared.cs  EuroTruck2TelemetryProvider.cs  ITelemetryProvider.cs  Simryx.Telemetry.csproj  TelemetryService.cs  TelemetrySnapshot.cs  TruckData.cs
src/Simryx.Updater/: Class1.cs
tests/Simryx.Core.Tests/: Simryx.Core.Tests.csproj  UnitTest1.cs
tests/Simryx.Devices.Tests/: Simryx.Devices.Tests.csproj  UnitTest1.cs
tests/Simryx.Security.Tests/: Simryx.Security.Tests.csproj  UnitTest1.cs
tests/Simryx.Telemetry.Tests/: Simryx.Telemetry.Tests.csproj  UnitTest1.cs
(+53 files in other folders)
